# ppgview

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/ppgview/: __init__.py  ble.py  command.py  hil.py  nordic.py  packet.py  sensor.py
